<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cars</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="searchHint">Search(Car Name)</string>
    <string name="ImageContentDescription">Image</string>
    <string name="CarLocationText">Car Location</string>
    <string name="SmsText">SMS</string>
    <string name="ShareText">Share</string>
    <string name="PhoneEditHint">Phone Number</string>
    <string name="SendSMSText">Send SMS</string>
    <string name="GoBackText">GO BACK</string>
    <string name="Loading">Loading..</string>
    <string name="SortBy">Sort By</string>
    <string name="Name">Name</string>
    <string name="Price">Price</string>
    <string name="Rating">Rating</string>
    <string name="Book">Book</string>
    <string name="pick_date">Pick Date</string>
    <string name="imageContentDescription">Image</string>
    <string name="bookedCarSharedPreference">cars</string>
    <string name="booked_history">Booking History</string>
	
</resources>