<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/margin_medium"
        card_view:cardCornerRadius="2dp" >

        <RelativeLayout
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/carImage"
                android:layout_width="@dimen/big_car_image_width"
                android:layout_height="@dimen/big_car_image_width"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/margin_medium"
                android:contentDescription="@string/ImageContentDescription" />

            <TextView
                android:id="@+id/carName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/margin_small"
                android:layout_marginBottom="0dp"
                android:layout_toRightOf="@+id/carImage"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Mariner"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/carName"
                android:layout_margin="@dimen/margin_small"
                android:layout_marginTop="0dp"
                android:layout_toRightOf="@+id/carImage"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/seperator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/carName"
                android:layout_margin="@dimen/margin_small"
                android:layout_marginTop="0dp"
                android:layout_toRightOf="@+id/carPrice"
                android:text="|"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RatingBar
                android:id="@+id/carRating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/seperator"
                android:layout_below="@+id/carName"
                android:layout_margin="@dimen/margin_small"
                android:layout_marginTop="0dp"
                android:layout_toRightOf="@+id/seperator"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1" />

            <TextView
                android:id="@+id/seater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/carPrice"
                android:layout_margin="@dimen/margin_small"
                android:layout_toRightOf="@+id/carImage"
                android:drawableLeft="@drawable/seater"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seater"
                android:layout_margin="@dimen/margin_small"
                android:layout_toRightOf="@+id/carImage"
                android:drawableLeft="@drawable/winter"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view1"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        card_view:cardCornerRadius="2dp" >

        <TextView
            android:id="@+id/labelCurrentLocation"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/currentLocationViewHeight"
            android:layout_alignParentBottom="true"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/CarLocationText"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/card_view2"
        android:layout_above="@+id/card_view5"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/card_view3"
        android:layout_margin="@dimen/margin_medium"
        card_view:cardCornerRadius="2dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/pickDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_small"
                android:onClick="showDatePickerDialog"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/Book"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        card_view:cardCornerRadius="2dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/SMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_small"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_sms"
                android:text="@string/SmsText"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_small"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_share"
                android:text="@string/ShareText"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/margin_medium"
        android:visibility="gone"
        card_view:cardCornerRadius="2dp" >

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FFA07A"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:hint="@string/PhoneEditHint"
                android:inputType="phone"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/Send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneNumber"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/SendSMSText"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/Back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneNumber"
                android:layout_margin="@dimen/margin_small"
                android:layout_toRightOf="@+id/Send"
                android:text="@string/GoBackText"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>